--- a/src/app/featured/dashbord/component/popups/add-user-popup/add-user.component.html
+++ b/src/app/featured/dashbord/component/popups/add-user-popup/add-user.component.html
@@ -55,7 +55,7 @@
                             </div>
                             <div class="col col-sm-5">
                                 <div class="form-group">
-                                    <input type="password" class="form-control" placeholder="Password"
+                                    <input type="text" class="form-control" placeholder="Password"
                                         formControlName="password"
                                         [ngClass]="{ 'has-error': isSubmitted && formControls.password.errors }">
                                 </div>
@@ -67,7 +67,7 @@
                             </div>
                             <div class="col col-sm-5">
                                 <div class="form-group">
-                                    <input type="password" class="form-control" placeholder="Confirm Password"
+                                    <input type="text" class="form-control" placeholder="Confirm Password"
                                         formControlName="confirmpassword"
                                         [ngClass]="{ 'has-error': isSubmitted && formControls.confirmpassword.errors }">
                                 </div>
