--- a/src/app/featured/dashbord/component/popups/add-cost-center-access/add-cost-center-access.component.html
+++ b/src/app/featured/dashbord/component/popups/add-cost-center-access/add-cost-center-access.component.html
@@ -12,11 +12,11 @@
                 <!-- Modal body -->
                 <div class="modal-body">
                     <div class="form-group-wrap row">
-                        <div class="col col-sm-4 label">
+                        <div class="col col-sm-4 label astrick">
                             User Name
                         </div>
                         <div class="col col-sm-5">
-                            <div class="form-group">
+                            <div class="form-group" *ngIf="!isEdit">
                                 <select class="form-control" formControlName="userid" [ngClass]="{
                                               'has-error': isSubmitted && formControls.userid.errors
                                             }">
@@ -25,6 +25,12 @@
                                     </option>
                                 </select>
                             </div>
+                            <div class="form-group" *ngIf="isEdit">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" formControlName="username" disabled>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                     <div class="radio-wrap" style="margin-bottom: 8px;">
