--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -4,7 +4,7 @@
       <img src="../assets/img/menu-icon.png" class="openbtn" (click)="openNav()" alt="">
     </div>
     <div class="logo">
-      <img src="../assets/img/logo.svg">
+      <img src="../assets/img/logo.svg" (click)="showDashbord()">
     </div>
   </div>
   <section class="login">
