--- a/src/app/featured/dashbord/component/location/location.component.html
+++ b/src/app/featured/dashbord/component/location/location.component.html
@@ -78,11 +78,12 @@
           </tr>
         </tbody>
       </table>
-      <ngb-pagination *ngIf="addedlocations&&addedlocations.length>0 &&pagination.totalPages"
-        [collectionSize]="pagination.totalPages" [(page)]="pagination.currentPage" (pageChange)="pageChanged($event)">
-      </ngb-pagination>
+
       <app-no-data *ngIf="!addedlocations||addedlocations.length==0"></app-no-data>
     </div>
+    <ngb-pagination *ngIf="addedlocations&&addedlocations.length>0 &&pagination.totalPages&&pagination.totalPages>10"
+      [collectionSize]="pagination.totalPages" [(page)]="pagination.currentPage" (pageChange)="pageChanged($event)">
+    </ngb-pagination>
   </section>
 </section>
 
