--- a/src/app/featured/dashbord/component/popups/add-company-popup/add-company-popup.component.html
+++ b/src/app/featured/dashbord/component/popups/add-company-popup/add-company-popup.component.html
@@ -48,7 +48,7 @@
                     </div>
                     <div class="form-group-wrap row">
                         <div class="col col-sm-5 label">
-                            address1
+                            Address1
                         </div>
                         <div class="col col-sm-5">
                             <div class="form-group">
@@ -59,7 +59,7 @@
                     </div>
                     <div class="form-group-wrap row">
                         <div class="col col-sm-5 label">
-                            address2
+                            Address2
                         </div>
                         <div class="col col-sm-5">
                             <div class="form-group">
