--- a/src/app/featured/dashbord/component/users-admin/users-admin.component.html
+++ b/src/app/featured/dashbord/component/users-admin/users-admin.component.html
@@ -92,11 +92,12 @@
           </tr>
         </tbody>
       </table>
-      <ngb-pagination *ngIf="allUsers&&allUsers.length>0 &&pagination.totalPages"
-        [collectionSize]="pagination.totalPages" [(page)]="pagination.currentPage" (pageChange)="pageChanged($event)">
-      </ngb-pagination>
+
       <app-no-data *ngIf="!allUsers||allUsers.length==0"></app-no-data>
     </div>
+    <ngb-pagination *ngIf="allUsers&&allUsers.length>0 &&pagination.totalPages&&pagination.totalPages>10"
+      [collectionSize]="pagination.totalPages" [(page)]="pagination.currentPage" (pageChange)="pageChanged($event)">
+    </ngb-pagination>
   </section>
 </section>
 
