--- a/src/app/featured/dashbord/component/popups/add-chain-popup/add-chain-popup.component.html
+++ b/src/app/featured/dashbord/component/popups/add-chain-popup/add-chain-popup.component.html
@@ -72,7 +72,21 @@
                         </div>
                         <div class="form-group-wrap row">
                             <div class="col-6 col-md-8">
-                                <div class="radio-wrap">
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox" value="1" formControlName="gcaonguestcount">
+                                        <span></span>
+                                        GCA Based on Guest Count
+                                    </label>
+                                </div>
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox" value="1" formControlName="cgaontransac">
+                                        <span></span>
+                                        CGA Based on transacions
+                                    </label>
+                                </div>
+                                <!-- <div class="radio-wrap">
                                     <label class="radio">
                                         GCA Based on Guest Count
                                         <input type="radio" [value]="1" formControlName="gcaonguestcount">
@@ -85,7 +99,7 @@
                                         <input type="radio" [value]="1" formControlName="cgaontransac">
                                         <span class="checkmark"></span>
                                     </label>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="col-6 col-md-4"></div>
                         </div>
