--- a/src/app/featured/dashbord/component/details-popups/location-details/location-details.component.html
+++ b/src/app/featured/dashbord/component/details-popups/location-details/location-details.component.html
@@ -77,7 +77,7 @@
               </div>
               <div class="wrap row">
                 <div class="col col-sm-5 label">
-                  city
+                  City
                 </div>
                 <div class="col-sm-7">
                   <div class="form-group">
