--- a/src/app/featured/dashbord/component/user/user.component.html
+++ b/src/app/featured/dashbord/component/user/user.component.html
@@ -4,7 +4,7 @@
     <div class="flex-wrap">
       <h1>User</h1>
       <div class="form-group search-box search">
-        <input type="text" class="form-control" [(ngModel)]="searchText" placeholder="Search here...">
+        <input type="text" class="form-control" #SearchInput placeholder="Search here...">
       </div>
     </div>
   </section>
@@ -74,7 +74,7 @@
     <div class="table-scroll-wrap">
       <table class="table table-striped table-main-body" *ngIf="allUsers&&allUsers.length>0">
         <tbody>
-          <tr *ngFor="let item of allUsers | orderBy: {property: column, direction: direction}|filter:searchText">
+          <tr *ngFor="let item of allUsers | orderBy: {property: column, direction: direction}">
             <td class="curser-point" (click)="openView(item)" style="width: 10%;">{{item.user_id}}</td>
             <td class="curser-point" (click)="openView(item)" style="width: 10%;">{{item.user_name}}</td>
             <td style="width: 20%;">{{item.user_phone}}</td>
