--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -624,10 +624,11 @@ li.menu-active a {
 .table-wrap {
     /* border-bottom: 1px solid #ddd; */
 }
-.table-scroll-wrap{
-    height: 430px;
+.table-scroll-wrap {
+    height: 380px;
     overflow: auto;
-    margin-bottom: 20px;
+    /* margin-bottom: 10px;
+    border-bottom: 1px solid #ddd; */
 }
 table.table.table-striped.table-main-body {
     margin-top: -1px;
@@ -635,7 +636,10 @@ table.table.table-striped.table-main-body {
 table.table.table-main-head {
     margin-bottom: 0 !important;
 }
-
+.pagination {
+    padding-top: 10px;
+    border-top: 1px solid #ddd;
+}
 
 
 .table{
@@ -802,7 +806,7 @@ td.dropdown-select .multi-select{
 .login-wrapper .form-textbox:focus{
     border: 2px solid #1a73e8 !important;
 }
-/*.login-wrapper .form-textbox { 
+/*.login-wrapper .form-textbox {
     box-shadow: inset 0 0 10px rgba(0,0,0,.1);
 }*/
 
