--- a/src/app/featured/dashbord/component/chain/chain.component.html
+++ b/src/app/featured/dashbord/component/chain/chain.component.html
@@ -5,7 +5,7 @@
     <div class="flex-wrap">
       <h1>Chain</h1>
       <div class="form-group search-box search">
-        <input type="text" class="form-control" [(ngModel)]="searchText" placeholder="Search here...">
+        <input type="text" class="form-control" #SearchInput placeholder="Search here...">
       </div>
     </div>
   </section>
@@ -42,10 +42,10 @@
         </tr>
       </thead>
     </table>
-    <div class="table-scroll-wrap">
+    <div class="table-scroll-wrap" malihu-scrollbar [scrollbarOptions]="this.scrollbarOptions">
       <table class="table table-striped table-main-body" *ngIf="addedChains&&addedChains.length>0">
         <tbody>
-          <tr *ngFor="let item of addedChains | orderBy: {property: column, direction: direction}|filter:searchText">
+          <tr *ngFor="let item of addedChains | orderBy: {property: column, direction: direction}">
             <td style="width: 20%;" class="curser-point" (click)="openView(item)">{{item.id}}</td>
             <td style="width: 20%;">{{item.ChainId}}</td>
             <td style="width: 30%;">{{item.ChainName}}</td>
