--- a/src/app/featured/dashbord/component/company-access/company-access.component.html
+++ b/src/app/featured/dashbord/component/company-access/company-access.component.html
@@ -5,7 +5,7 @@
     <div class="flex-wrap">
       <h1>Company Access</h1>
       <div class="form-group search-box search">
-        <input type="text" class="form-control" [(ngModel)]="searchText" placeholder="Search here...">
+        <input type="text" class="form-control" #SearchInput placeholder="Search here...">
       </div>
     </div>
   </section>
@@ -53,11 +53,10 @@
         </tr>
       </thead>
     </table>
-    <div class="table-scroll-wrap">
+    <div class="table-scroll-wrap" malihu-scrollbar [scrollbarOptions]="this.scrollbarOptions">
       <table class="table table-striped table-main-body" *ngIf="companyAccess&&companyAccess.length>0">
         <tbody>
-          <tr
-            *ngFor="let item of companyAccess| orderBy: {property: column, direction: direction}|filter:searchText;index as i">
+          <tr *ngFor="let item of companyAccess| orderBy: {property: column, direction: direction};index as i">
             <td class="curser-point" (click)="openView(item)" style="width: 20%;">{{item.UserID}}</td>
             <td class="curser-point" (click)="openView(item)" style="width: 20%;">{{item.user_name}}</td>
             <td style="width: 20%;">{{item.CompanyID}}</td>
