--- a/src/app/featured/dashbord/component/company/company.component.html
+++ b/src/app/featured/dashbord/component/company/company.component.html
@@ -4,7 +4,7 @@
     <div class="flex-wrap">
       <h1>Company</h1>
       <div class="form-group search-box search">
-        <input type="text" class="form-control" [(ngModel)]="searchText" placeholder="Search here...">
+        <input type="text" class="form-control" #SearchInput placeholder="Search here...">
       </div>
     </div>
   </section>
@@ -59,11 +59,11 @@
         </tr>
       </thead>
     </table>
-    <div class="table-scroll-wrap">
+    <div class="table-scroll-wrap" malihu-scrollbar [scrollbarOptions]="this.scrollbarOptions">
       <table class="table table-striped table-main-body" *ngIf="companies&&companies.length>0">
         <tbody>
-          <tr *ngFor="let item of companies | orderBy: {property: column, direction: direction}|filter:searchText">
-            <td class="curser-point" (click)="openView(item)" style="width: 10%;">{{item.id}}</td>
+          <tr *ngFor="let item of companies | orderBy: {property: column, direction: direction}">
+            <td class=" curser-point" (click)="openView(item)" style="width: 10%;">{{item.id}}</td>
             <td class="curser-point" (click)="openView(item)" style="width: 10%;">{{item.CompanyName}}</td>
             <td style="width: 20%;">{{item.Address1}}</td>
             <td style="width: 20%;">{{item.MobileNo}}</td>
