--- a/src/app/featured/dashbord/component/currency/currency.component.html
+++ b/src/app/featured/dashbord/component/currency/currency.component.html
@@ -4,7 +4,7 @@
     <div class="flex-wrap">
       <h1>Currency</h1>
       <div class="form-group search-box search">
-        <input type="text" class="form-control" [(ngModel)]="searchText" placeholder="Search here...">
+        <input type="text" class="form-control" #SearchInput placeholder="Search here...">
       </div>
     </div>
   </section>
@@ -53,10 +53,10 @@
         </tr>
       </thead>
     </table>
-    <div class="table-scroll-wrap">
+    <div class="table-scroll-wrap" malihu-scrollbar [scrollbarOptions]="this.scrollbarOptions">
       <table class="table table-striped table-main-body" *ngIf="addedCurrency&&addedCurrency.length>0">
         <tbody>
-          <tr *ngFor="let item of addedCurrency  | orderBy: {property: column, direction: direction}|filter:searchText">
+          <tr *ngFor="let item of addedCurrency  | orderBy: {property: column, direction: direction}">
             <td class="curser-point" (click)="openView(item)" style="width: 15%;">{{item.id}}</td>
             <td class="curser-point" (click)="openView(item)" style="width: 20%;">{{item.CurrencyName}}</td>
             <td style="width: 15%;">{{item.CurrencySymbol}}</td>
