--- a/src/app/featured/dashbord/component/user/user.component.html
+++ b/src/app/featured/dashbord/component/user/user.component.html
@@ -71,7 +71,7 @@
         </tr>
       </thead>
     </table>
-    <div class="table-scroll-wrap">
+    <div class="table-scroll-wrap" malihu-scrollbar [scrollbarOptions]="this.scrollbarOptions">
       <table class="table table-striped table-main-body" *ngIf="allUsers&&allUsers.length>0">
         <tbody>
           <tr *ngFor="let item of allUsers | orderBy: {property: column, direction: direction}">
