--- a/src/app/featured/dashbord/component/company/company.component.html
+++ b/src/app/featured/dashbord/component/company/company.component.html
@@ -4,7 +4,8 @@
     <div class="flex-wrap">
       <h1>Company</h1>
       <div class="form-group search-box search">
-        <input type="text" class="form-control" #SearchInput placeholder="Search here...">
+        <input type="text" class="form-control" #SearchInput [ngClass]="{'loading':isSearching}"
+          placeholder="Search here...">
       </div>
     </div>
   </section>
@@ -59,7 +60,7 @@
         </tr>
       </thead>
     </table>
-    <div class="table-scroll-wrap" malihu-scrollbar [scrollbarOptions]="this.scrollbarOptions">
+    <div class="table-scroll-wrap" malihu-scrollbar [scrollbarOptions]="scrollbarOptions">
       <table class="table table-striped table-main-body" *ngIf="companies&&companies.length>0">
         <tbody>
           <tr *ngFor="let item of companies | orderBy: {property: column, direction: direction}">
