--- a/src/app/featured/dashbord/component/cost-center-access/cost-center-access.component.html
+++ b/src/app/featured/dashbord/component/cost-center-access/cost-center-access.component.html
@@ -4,7 +4,8 @@
     <div class="flex-wrap">
       <h1>Cost Center Access</h1>
       <div class="form-group search-box search">
-        <input type="text" class="form-control" #SearchInput placeholder="Search here...">
+        <input type="text" class="form-control" [ngClass]="{'loading':isSearching}" #SearchInput
+          placeholder="Search here...">
       </div>
     </div>
   </section>
@@ -46,7 +47,7 @@
         </tr>
       </thead>
     </table>
-    <div class="table-scroll-wrap" malihu-scrollbar [scrollbarOptions]="this.scrollbarOptions">
+    <div class="table-scroll-wrap" malihu-scrollbar [scrollbarOptions]="scrollbarOptions">
       <table class="table table-striped table-main-body" *ngIf="allCostAccess&&allCostAccess.length>0">
         <tbody>
           <tr *ngFor="let item of allCostAccess  | orderBy: {property: column, direction: direction}">
