--- a/src/app/featured/dashbord/component/currency/currency.component.html
+++ b/src/app/featured/dashbord/component/currency/currency.component.html
@@ -4,7 +4,8 @@
     <div class="flex-wrap">
       <h1>Currency</h1>
       <div class="form-group search-box search">
-        <input type="text" class="form-control" #SearchInput placeholder="Search here...">
+        <input type="text" class="form-control" [ngClass]="{'loading':isSearching}" #SearchInput
+          placeholder="Search here...">
       </div>
     </div>
   </section>
@@ -53,7 +54,7 @@
         </tr>
       </thead>
     </table>
-    <div class="table-scroll-wrap" malihu-scrollbar [scrollbarOptions]="this.scrollbarOptions">
+    <div class="table-scroll-wrap" malihu-scrollbar [scrollbarOptions]="scrollbarOptions">
       <table class="table table-striped table-main-body" *ngIf="addedCurrency&&addedCurrency.length>0">
         <tbody>
           <tr *ngFor="let item of addedCurrency  | orderBy: {property: column, direction: direction}">
