--- a/src/app/featured/dashbord/component/users-admin/users-admin.component.html
+++ b/src/app/featured/dashbord/component/users-admin/users-admin.component.html
@@ -5,7 +5,8 @@
     <div class="flex-wrap">
       <h1>User</h1>
       <div class="form-group search-box search">
-        <input type="text" class="form-control" #SearchInput placeholder="Search here...">
+        <input type="text" class="form-control" [ngClass]="{'loading':isSearching}" #SearchInput
+          placeholder="Search here...">
       </div>
     </div>
   </section>
@@ -73,7 +74,7 @@
         </tr>
       </thead>
     </table>
-    <div class="table-scroll-wrap" malihu-scrollbar [scrollbarOptions]="this.scrollbarOptions">
+    <div class="table-scroll-wrap" malihu-scrollbar [scrollbarOptions]="scrollbarOptions">
       <table class="table table-striped table-main-body" *ngIf="allUsers&&allUsers.length>0">
         <tbody>
           <tr *ngFor="let item of allUsers| orderBy: {property: column, direction: direction}">
