--- a/src/app/shared/components/loader/loader.component.html
+++ b/src/app/shared/components/loader/loader.component.html
@@ -1,3 +1,3 @@
-<!-- <div *ngIf="showLoader">Loading....</div> -->
-
-<mat-progress-bar *ngIf="showLoader" mode="indeterminate"></mat-progress-bar>
+<div *ngIf="showLoader" class="progress-bar-container">
+    <mat-progress-bar mode="indeterminate" color="warn"></mat-progress-bar>
+</div>
