--- a/src/app/featured/dashbord/component/chain/chain.component.css
+++ b/src/app/featured/dashbord/component/chain/chain.component.css
@@ -1,3 +1,11 @@
 .has-error{
     border: 1px solid red;
 }
+.example-container {
+  max-height: 400px;
+  overflow: auto;
+}
+
+table {
+  width: 100%;
+}
