--- a/src/app/featured/dashbord/component/chain/chain.component.html
+++ b/src/app/featured/dashbord/component/chain/chain.component.html
@@ -4,13 +4,9 @@
       Chain</button>
     <div class="flex-wrap">
       <h1>Chain</h1>
-      <div class="form-group search-box search">
-        <input type="text" class="form-control" [ngClass]="{'loading':isSearching}" #SearchInput
-          placeholder="Search here...">
-      </div>
     </div>
   </section>
-  <section class="table-wrap">
+  <!-- <section class="table-wrap">
     <table class="table table-main-head">
       <thead>
         <tr>
@@ -62,7 +58,38 @@
     <ngb-pagination *ngIf="addedChains&&addedChains.length>0 && pagination.totalPages &&pagination.totalPages>10"
       [collectionSize]="pagination.totalPages" [(page)]="pagination.currentPage" (pageChange)="pageChanged($event)">
     </ngb-pagination>
-  </section>
+  </section> -->
+  <div class="example-container mat-elevation-z8" *ngIf="addedChains&&addedChains.length>0">
+    <table mat-table [dataSource]="dataSource" matSort>
+
+      <!-- Position Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> Id </th>
+        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="ChainId">
+        <th mat-header-cell *matHeaderCellDef> Chain Code </th>
+        <td mat-cell *matCellDef="let element"> {{element.ChainId}} </td>
+      </ng-container>
+
+      <!-- Weight Column -->
+      <ng-container matColumnDef="ChainName">
+        <th mat-header-cell *matHeaderCellDef> Chain Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.ChainName}} </td>
+      </ng-container>
+
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="Operation">
+        <th mat-header-cell *matHeaderCellDef> Operation </th>
+        <td mat-cell *matCellDef="let element"> {{element.Operation}} </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
 </section>
 
 
