--- a/src/app/featured/dashbord/component/home/home.component.css
+++ b/src/app/featured/dashbord/component/home/home.component.css
@@ -1,3 +1,34 @@
-mat-sidenav {
-  width: 16%;
+mat-sidenav.mat-sidenav.sidenav {
+    position: fixed;
+    top: 64px;
+    bottom: 0;
+    left: 0;
+    padding: 0;
+    min-width: 260px;
+    background-color: #fff;
+    box-shadow: 6px 0 6px rgba(0,0,0,.1);
+}
+
+mat-sidenav.mat-sidenav.sidenav.collapsed {
+    top: 56px
+}
+
+mat-sidenav-container.sidenav-container {
+    min-height: 100%;
+    height: auto!important;
+    max-width: 100%;
+    margin: 0;
+    transform: none
+}
+
+mat-sidenav-container.sidenav-container.has-floating-toc {
+    max-width: 82%
+}
+
+mat-sidenav-container.sidenav-container.mat-drawer-container.mat-sidenav-container,mat-sidenav-container .sidenav-content {
+    background-color: #fff
+}
+
+mat-sidenav-container div.mat-sidenav-content {
+    height: auto
 }
