--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-toolbar.mat-primary {
+    background: #1976d2;
+    color: #fff;
+}
